--- a/index.css
+++ b/index.css
@@ -274,7 +274,8 @@ aside {
 /* Modal content */
 .modal-head {
     background-color: var(--primary-bg);
-    padding: 15px;
+    padding: 25px;
+    border-radius: 10px 10px 0px 0px;
 }
 
 .modal-head p {
@@ -290,12 +291,12 @@ aside {
     background-color: #fefefe;
     margin: 15% auto;
     border: 1px solid #888;
-    width: 20%;
-    /* border-radius: 10px; */
+    width: 22%;
+    border-radius: 10px;
 }
 
 .modal-cont {
-    padding: 20px 40px;
+    padding: 20px 50px;
 }
 
 .modal-cont p {
@@ -311,6 +312,7 @@ aside {
 
 .modal-btns {
     column-gap: 10px;
+    padding: 30px 0px 40px 0px;
 }
 
 .mb-del {
@@ -978,4 +980,13 @@ table {
 
 .client-modal-title {
     margin-left: 105px;
+}
+
+/* ==================================== */
+.add-aprt-content {
+    width: 800px !important;
+}
+
+.add-apart-modal {
+    margin-right: 830px;
 }
