--- a/index.css
+++ b/index.css
@@ -44,6 +44,7 @@ p {
     height: 60px;
     padding: 15px 0px 20px 30px;
     border: 1px solid #5151513f;
+    border-radius: 6px !important;
 }
 
 .selects:focus {
@@ -774,7 +775,7 @@ table {
 .apf-inp2 input {
     border: none;
     padding: 0px;
-    height: auto;
+    height: 30px;
     padding-top: 8px;
 }
 
@@ -989,4 +990,33 @@ table {
 
 .add-apart-modal {
     margin-right: 830px;
+}
+
+/* ================================= */
+.apf-inp2 input:focus {
+    border: none !important;
+    outline: none !important;
+    box-shadow: none !important;
+}
+
+.aprt-page select {
+    width: 100%;
+}
+
+.main-aprt-page h4 {
+    text-align: center;
+    padding: 20px 0px 40px 0px;
+}
+
+.aprt-page-btn {
+    padding: 80px 0px;
+}
+
+/* Custom CSS for MDB select arrow */
+.selects::after {
+    content: "\25BC";
+    position: absolute;
+    top: calc(50% - 0.5em);
+    right: 1em;
+    pointer-events: none;
 }
