--- a/index.css
+++ b/index.css
@@ -25,6 +25,7 @@ p {
 
 .main-container {
     height: 100vh;
+    padding: 0px;
     padding-left: 350px;
 }
 
@@ -66,6 +67,7 @@ aside {
     position: fixed;
     left: 0;
     padding: 25px 0px 0px 0px;
+    z-index: 100;
 }
 
 .site-logo {
@@ -828,6 +830,10 @@ table {
     min-height: 100px;
 }
 
+.modal-header {
+    border: 10px 10px 0px 0px !important;
+}
+
 .add-furn-modal {
     margin: 100px 100px 100px 480px !important;
 }
@@ -1019,4 +1025,12 @@ table {
     top: calc(50% - 0.5em);
     right: 1em;
     pointer-events: none;
+}
+
+.color-checkbox {
+    display: none;
+}
+
+.apf-row {
+    width: 100%;
 }
