--- a/phone.css
+++ b/phone.css
@@ -235,6 +235,17 @@
 
     .cross-btn i {
         font-size: 35px;
+        animation: btnAnimation .7s ease-in-out;
+    }
+
+    @keyframes btnAnimation {
+        0% {
+            opacity: 0;
+        }
+
+        100% {
+            opacity: 1;
+        }
     }
 
     /* =============================================================== */
@@ -345,4 +356,27 @@
         top: 4%;
     }
 
+    .edit-aimg-col {
+        width: 50%;
+        margin-left: 130px;
+    }
+
+    .fi-label {
+        top: 6%;
+    }
+
+}
+@media(max-width:424px) {
+    .aprt-form-create button {
+        padding: 10px 8px;
+    }
+
+    .edit-aimg-col {
+        width: 50%;
+        margin-left: 130px;
+    }
+
+    .fi-label {
+        top: 4%;
+    }
 }
